@@ -1,6 +1,7 @@
 2024-07:
 - Inference: added support for using indices of a templated type.
 - Inference: improved support for detecting mutation in loops/conditionals.
+- DRF: added option to ignore asserts.
 
 2024-06:
 - Inference: improved support for assertion inference
